--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="assets/logo.png">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js defer"></script>
+    <title>Calculatrice</title>
 </head>
 <body>
-    
+    <header>
+        <img src="assets/logo.png">
+    </header>
+
+    <main>
+        <div class="form-infos">
+            <h1>Calculatrice prêt immobilier</h1>
+            <form>
+                <div class="input-amount">
+                    <label for="amount">Montant emprunté</label>
+                    <input type="text" name="amount" id="amount" placeholder="100 000" required>
+                    <div class="input-icon">€</div>
+                </div>
+            </form>
+        </div>
+    </main>
+
+
 </body>
 </html>
