--- a/index.html
+++ b/index.html
@@ -40,7 +40,39 @@
         </div>
 
         <div class="tab">
-            
+            <h2>Tableau d'amortissement</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Mois</th>
+                        <th>Solde Initial</th>
+                        <th>Échéance</th>
+                        <th>Intérêts</th>
+                        <th>Amortissement</th>
+                        <th>Solde Restant</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <th>100 000</th>
+                        <th>607,33€</th>
+                        <th>607,33€</th>
+                        <th>607,33€</th>
+                        <th>607,33€</th>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <th>100 000</th>
+                        <th>607,33€</th>
+                        <th>607,33€</th>
+                        <th>607,33€</th>
+                        <th>607,33€</th>
+                    </tr>
+                </tbody>
+            </table>
+
+            <button id="download">Télécharger en PDF</button>
         </div>
     </main>
 
