--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="shortcut icon" href="assets/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-mobile.css">
-    <script src="js/script.js defer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Calculatrice</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                 <div class="inputs">
                     <label for="amount">Montant emprunté</label>
                     <div class="input-custom">
-                        <input type="text" name="amount" id="amount" placeholder="100 000" required>
+                        <input type="text" name="amount" id="amount" placeholder="100000" required>
                         <div class="input-icon">€</div>
                     </div>
                 </div>
@@ -37,12 +38,12 @@
                 <div class="inputs">
                     <label for="interest">Durée de remboursement</label>
                     <div class="input-custom">
-                        <input type="text" name="interest" id="interest" placeholder="15" required>
+                        <input type="text" name="duration" id="duration" placeholder="15" required>
                         <div class="input-icon">an(s)</div>
-                </div>
+                    </div>
                 </div>
 
-                <div id="fields-error">Veuillez remplir tous les champs !</div>
+                <div id="fields-error">Veuillez remplir tous les champs correctement !</div>
 
                 <button type="submit" id="calculate">Calculer</button>
             </form>
@@ -62,29 +63,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th>1</th>
-                        <th>100 000</th>
-                        <th>607,33€</th>
-                        <th>607,33€</th>
-                        <th>607,33€</th>
-                        <th>607,33€</th>
-                    </tr>
-                    <tr>
-                        <th>1</th>
-                        <th>100 000</th>
-                        <th>607,33€</th>
-                        <th>607,33€</th>
-                        <th>607,33€</th>
-                        <th>607,33€</th>
-                    </tr>
                 </tbody>
             </table>
 
-            <button id="download">Télécharger en PDF</button>
+            <button id="download" onclick="generatePDF()">Télécharger en PDF</button>
         </div>
     </main>
-
 
 </body>
 </html>
