--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </tbody>
             </table>
 
-            <button id="download" onclick="generatePDF()">Télécharger en PDF</button>
+            <button id="download">Télécharger en PDF</button>
         </div>
     </main>
 
